fix gap

--- a/index.css
+++ b/index.css
@@ -518,6 +518,11 @@ footer {
 
 @media (max-width: 550px) {
 
+    .main__list-cards {
+        column-gap: 10px;
+        row-gap: 30px;
+    }
+
     .main__card-title {
         font-size: 16px;
     }
